@@ -1,9 +1,17 @@
 package com.vinfast.rental_service.mapper;
 
 import com.vinfast.rental_service.dtos.request.CarModelCreateRequest;
+import com.vinfast.rental_service.dtos.request.CarModelUpdateRequest;
+import com.vinfast.rental_service.dtos.response.CarModelResponse;
+import com.vinfast.rental_service.model.CarImage;
 import com.vinfast.rental_service.model.CarModel;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
+import org.mapstruct.MappingTarget;
+import org.mapstruct.Named;
+
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface CarModelMapper {
@@ -12,14 +20,13 @@ public interface CarModelMapper {
     @Mapping(target = "images", ignore = true)
     CarModel toEntity(CarModelCreateRequest request);
 
-//    @Mapping(target = "images", source = "images", qualifiedByName = "mapImages")
-//    CarModelResponse toResponse(CarModel carModel);
-//
-//    @Named("mapImages")
-//    default List<String> mapImages(List<CarImage> images) {
-//        return images.stream()
-//                .sorted(Comparator.comparingInt(CarImage::getDisplayOrder))
-//                .map(CarImage::getImageUrl)
-//                .toList();
-//    }
+    void updateCarModel(CarModelUpdateRequest request, @MappingTarget CarModel carModel);
+
+    @Mapping(source = "images", target = "imageUrls", qualifiedByName = "mapImagesToUrls")
+    CarModelResponse toDTO(CarModel request);
+
+    @Named("mapImagesToUrls")
+    default List<String> mapImagesToUrls(List<CarImage> images){
+        return images != null ? images.stream().map(CarImage::getImageUrl).collect(Collectors.toList()) : null;
+    }
 }
